# minimal-scheme-implementations

./: .gitignore
go/: go.mod
go/src/: generator.go  main.go
python/: pyproject.toml
python/src/: generator.py
rust/: Cargo.toml
typescript/: package.json  tsconfig.json
typescript/src/: main.ts
