[tool.poetry]
name = "python-schemes"
version = "0.1.0"
description = ""
authors = ["lambda-chat <chat.algebrique@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
